--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> 
     <meta charset="UTF-8" />
     <title>Making your first Phaser 3 Game - Part 10</title>
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
+    <script src="node_modules/phaser/dist/phaser.js"></script>
     <style type="text/css">
         body {
             margin: 0;
@@ -40,6 +40,7 @@ var cursors;
 var score = 0;
 var gameOver = false;
 var scoreText;
+var audioSprite;
 
 var game = new Phaser.Game(config);
 
@@ -49,11 +50,17 @@ function preload ()
     this.load.image('ground', 'assets/platform.png');
     this.load.image('star', 'assets/star.png');
     this.load.image('bomb', 'assets/bomb.png');
-    this.load.spritesheet('dude', 'assets/hops.png', { frameWidth: 32, frameHeight: 62 });
+    this.load.spritesheet('dude', 'assets/hops2.png', { frameWidth: 32, frameHeight: 62 });
+    this.load.audio('vg1', [
+        'assets/vg1.ogg',
+        'assets/vg1.mp3'
+    ]);
 }
+
 
 function create ()
 {
+
     //  A simple background for our game
     this.add.image(400, 300, 'sky');
 
@@ -128,6 +135,9 @@ function create ()
     this.physics.add.overlap(player, stars, collectStar, null, this);
 
     this.physics.add.collider(player, bombs, hitBomb, null, this);
+    var music = this.sound.add('vg1', { loop: true });
+
+    music.play();
 }
 
 function update ()
@@ -186,7 +196,6 @@ function collectStar (player, star)
         bomb.setCollideWorldBounds(true);
         bomb.setVelocity(Phaser.Math.Between(-200, 200), 20);
         bomb.allowGravity = false;
-
     }
 }
 
